<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="app_information">My Nano-degree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="nano_degree_first_project">popular movies</string>
    <string name="nano_degree_second_project">stock hawk</string>
    <string name="nano_degree_third_project">build it bigger</string>
    <string name="nano_degree_fourth_project">make your app material</string>
    <string name="nano_degree_fifth_project">go ubiquitous</string>
    <string name="nano_degree_sixth_project">capstone</string>
</resources>
